--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'java-library'
+apply plugin: 'java'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -6,3 +6,4 @@ dependencies {
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
+//apply from: 'publish.gradle'
