--- a/router/build.gradle
+++ b/router/build.gradle
@@ -1,10 +1,6 @@
 apply plugin: 'com.android.library'
-
 android {
     compileSdkVersion 26
-
-
-
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 26
@@ -15,6 +11,10 @@ android {
 
     }
 
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -31,6 +31,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    // 这里不能使用implementation，因为pom依赖不识别
+    compile 'com.kong.router:annotation:0.3.0'
 }
+apply from: 'publish.gradle'
 
 
